--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -190,6 +190,12 @@ figure.code {
 aside {
 	display: none;
 }
+
+article img {
+     box-shadow: none !important;
+     border: none !important;
+}
+
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
 
