--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -27,6 +27,6 @@
   <script>!window.jQuery && document.write(unescape('%3Cscript src="./javascripts/lib/jquery.min.js"%3E%3C/script%3E'))</script>
   <script src="{{ root_url }}/javascripts/octopress.js" type="text/javascript"></script>
   {% include custom/head.html %}
-  {% include custom/head_facebook.html %}
+  {% include custom/head_facebook_twitter.html %}
   {% include google_analytics.html %}
 </head>
