--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -10,6 +10,7 @@ single: true
     <p class="meta">
       {% include post/author.html %}
       {% include post/date.html %}{% if updated %}{{ updated }}{% else %}{{ time }}{% endif %}
+      {% if page.update_notes %}(Revised on {{ page.update_notes }}){% endif %}
       {% include post/categories.html %}
     </p>
     {% comment %}<!--
