Add arxiv papers post; corrections of mobile layout

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,7 @@
+{% comment %}<!--
+<li><a href="{{ root_url }}/about">About</a></li>
+-->{% endcomment %}
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">Posts</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archive</a></li>
-  
 </ul>
