--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -11,8 +11,8 @@ body {
 	font-family: helvetica,arial,clean,sans-serif !important;
 	font-size: 1em;
 	max-width: 705px;
-	padding-left: 0.5em;
-	padding-right: 0.5em;
+	padding-left: 24px;
+	padding-right: 24px;
 
 	> header {
 		background: $white;
