--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -11,7 +11,7 @@ single: true
       {% include post/author.html %}
       {% include post/date.html %}{% if updated %}{{ updated }}{% else %}{{ time }}{% endif %}
       {% if page.update_notes %}(Revised on {{ page.update_notes }}){% endif %}
-      {% include post/categories.html %}
+      {% include post/tags.html %}
     </p>
     {% comment %}<!--
     {% unless page.sharing == false %}
