--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -206,6 +206,7 @@ article img {
 
 @import "mathjax";
 @import "image-caption";
+@import "youtube-embeds";
 @import "anchorjs";
 @import "coderay-github";
 
