--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -17,4 +17,5 @@ MathJax.Hub.Config({
   "HTML-CSS": { preferredFont: "TeX", availableFonts: ["STIX","TeX"] }
 });
 </script>
-<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML" type="text/javascript"></script>
+<link href="/stylesheets/rocket-loader/loader.min.css" rel="stylesheet" type="text/css">
