--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -2,6 +2,7 @@
 {% include head.html %}
 <body {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} class="collapse-sidebar sidebar-footer" >
   {% include youtube_preview.html %}
+  {% include mathjax.html %}
   <header role="banner">{% include header.html %}</header>
   <nav role="navigation">{% include navigation.html %}</nav>
   <div id="main">
