--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -64,6 +64,7 @@ h6, section h5, section section h4, section section section h3 {
 }
 
 p, article blockquote, ul, ol { margin-bottom: 1.5em; }
+.spacer { margin-bottom: 0em; }
 
 ul { list-style-type: disc;
   ul { list-style-type: circle; margin-bottom: 0px;
