--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -2,6 +2,6 @@
 <li><a href="{{ root_url }}/about">About</a></li>
 -->{% endcomment %}
 <ul class="main-navigation">
-  <li><a href="{{ root_url }}/">Posts</a></li>
-  <li><a href="{{ root_url }}/blog/archives">Archive</a></li>
+  <li><a href="{{ root_url }}/">Blog</a></li>
+  <li><a href="{{ root_url }}/notes">Notes</a></li>
 </ul>
