--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,4 @@
 <p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
+  Copyright &copy; {{ site.time | date: "%Y" }} - <a href="{{ root_url }}/about">{{ site.author }}</a> -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>. Theme based on <a href="https://github.com/lucaslew/whitespace"> Whitespace</a>. Subscribe via <a href="{{ site.subscribe_rss }}">RSS Feed</a>
 </p>
