--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -8,8 +8,13 @@
     {% unless page.meta == false %}
       <p class="meta">
         {% include post/date.html %}{{ time }}
+        <!--
         {% if site.disqus_short_name and page.comments != false and post.comments != false and site.disqus_show_comment_count == true %}
          | <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#disqus_thread">Comments</a>
+        {% endif %}
+        -->
+        {% if page.comments != false and post.comments != false and true == false %}
+         | <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#giscus-comments">Comments</a>
         {% endif %}
       </p>
     {% endunless %}
