--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -28,12 +28,34 @@ single: true
     </p>
   </footer>
 </article>
+{% if page.comments == true %}
+  <div id="giscus-comments">
+    <script src="https://giscus.app/client.js"
+        data-repo="lopespm/lopespm.github.com"
+        data-repo-id="{{ site.giscus_repo_id }}"
+        data-category="Comments"
+        data-category-id="DIC_kwDOBC3uaM4CYFCk"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="0"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="light"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+    </script>
+  </section>
+{% endif %}
+<!--
 {% if site.disqus_short_name and page.comments == true %}
   <section>
     <h1>Comments</h1>
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
   </section>
 {% endif %}
+-->
 </div>
 {% unless page.sidebar == false %}
 <aside class="sidebar">
