--- a/source/_layouts/page_blog_and_notes.html
+++ b/source/_layouts/page_blog_and_notes.html
@@ -2,7 +2,7 @@
 layout: default_blog_and_notes
 ---
 
-<div>
+<div class="article-full">
 <article role="article">
   {% if page.title %}
   <header>
