--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 single: true
 ---
 
-<div>
+<div class="article-full">
 <article class="hentry" role="article">
   {% include article.html %}
   <footer>
