--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -26,7 +26,7 @@ layout: default
 </article>
 {% if page.comments == true %}
   <div id="giscus-comments">
-    <script src="https://giscus.app/client.js"
+    <script async src="https://giscus.app/client.js"
         data-repo="lopespm/lopespm.github.com"
         data-repo-id="{{ site.giscus_repo_id }}"
         data-category="Comments"
