--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -30,7 +30,7 @@ single: true
 </article>
 {% if page.comments == true %}
   <div id="giscus-comments">
-    <script src="https://giscus.app/client.js"
+    <script async src="https://giscus.app/client.js"
         data-repo="lopespm/lopespm.github.com"
         data-repo-id="{{ site.giscus_repo_id }}"
         data-category="Comments"
