--- a/source/_includes/mathjax.html
+++ b/source/_includes/mathjax.html
@@ -1,5 +1,5 @@
 <!-- mathjax config similar to math.stackexchange -->
-<script type="text/x-mathjax-config">
+<script type="text/x-mathjax-config" async>
 MathJax.Hub.Config({
   jax: ["input/TeX", "output/HTML-CSS"],
   tex2jax: {
@@ -12,4 +12,4 @@ MathJax.Hub.Config({
   "HTML-CSS": { preferredFont: "TeX", availableFonts: ["STIX","TeX"] }
 });
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML" type="text/javascript" async></script>
