--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -9,9 +9,10 @@
 -->{% endcomment %}
 
 <ul class="subscription">
-  <li><a href="https://twitter.com/lopes_pm"><img src="{{ root_url }}/images/cn_twitter_19.png" height="19px" width="19px" /></a></li>
-  <li><a href="https://github.com/lopespm"><img src="{{ root_url }}/images/cn_github_19.png" height="19px" width="19px"/></a></li>
-  <li><a href="{{ site.subscribe_rss }}"><img src="{{ root_url }}/images/cn_rss_19.png" height="19px" width="19px"/></a></li>  
+  <li><a href="https://www.youtube.com/@lopespm"><img src="{{ root_url }}/images/cn_youtube_19.png" height="19px" width="19px" alt="Go to YouTube Channel"/></a></li>
+  <li><a href="https://twitter.com/lopes_pm"><img src="{{ root_url }}/images/cn_twitter_19.png" height="19px" width="19px" alt="Go to Twitter"/></a></li>
+  <li><a href="https://github.com/lopespm"><img src="{{ root_url }}/images/cn_github_19.png" height="19px" width="19px" alt="Go to GitHub"/></a></li>
+  <li><a href="{{ site.subscribe_rss }}"><img src="{{ root_url }}/images/cn_rss_19.png" height="19px" width="19px" alt="RSS Feed"/></a></li>  
 </ul>
 
   {% if site.simple_search %}
